--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -20,10 +20,12 @@
             <img src="img/logo-white.png" alt="logo" class="logo">
         </div>
 
-        <h1 class="heading-primary">
-            <span class="heading-primary-main">Out Doors</span>
-            <span class="heading-primary-sub">is where life happens</span>
-        </h1>
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Out Doors</span>
+                <span class="heading-primary-sub">is where life happens</span>
+            </h1>
+        </div>
     </header>
 
 </body>
