--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -25,6 +25,10 @@
                 <span class="heading-primary-main">Out Doors</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
+
+            <button class="btn btn-white">
+                Discover Our Tours
+            </button>
         </div>
     </header>
 
