--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -16,21 +16,47 @@
 
 <body>
     <header class="header">
-        <div class="logo-box">
-            <img src="img/logo-white.png" alt="logo" class="logo">
+        <div class="header__logo-box">
+            <img src="img/logo-white.png" alt="logo" class="header__logo">
         </div>
 
-        <div class="text-box">
+        <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Out Doors</span>
-                <span class="heading-primary-sub">is where life happens</span>
+                <span class="heading-primary--main">Out Doors</span>
+                <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <button class="btn btn-white">
+            <button class="btn btn--white btn--animated">
                 Discover Our Tours
             </button>
         </div>
     </header>
+
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">Excting tours for advanturous people</h2>
+            </div>
+            <div class="section-about__row">
+                <div class="section-about__col">
+                    <h3 class="heading-tertiary">You're going to fall in love with nature</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
+                        doloremque nihil adipisci officiis deleniti, voluptates eius harum distinctio non doloribus quia?
+                    </p>
+        
+                    <h3 class="heading-tertiary">Live adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
+                        doloremque nihil adipisci officiis deleniti, voluptates eius harum distinctio non doloribus quia?
+                    </p>
+                </div>
+                <div class="section-about__col">
+                    Image Composition
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
