--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -34,25 +34,54 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
-                <h2 class="heading-secondary">Excting tours for advanturous people</h2>
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary ">Excting tours for advanturous people</h2>
             </div>
-            <div class="section-about__row">
-                <div class="section-about__col">
-                    <h3 class="heading-tertiary">You're going to fall in love with nature</h3>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
                         doloremque nihil adipisci officiis deleniti, voluptates eius harum distinctio non doloribus quia?
                     </p>
         
-                    <h3 class="heading-tertiary">Live adventures like you never have before</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
                         doloremque nihil adipisci officiis deleniti, voluptates eius harum distinctio non doloribus quia?
                     </p>
+
+                    <a href="#" class="btn-text">Learn More &rarr;</a>
                 </div>
-                <div class="section-about__col">
-                    Image Composition
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
+                        <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
+                        <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary">Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi esse molestias ad maxime corrupti temporibus alias,
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box"></div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box"></div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box"></div>
                 </div>
             </div>
         </section>
