--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -44,7 +44,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
                         doloremque nihil adipisci officiis deleniti, voluptates eius harum distinctio non doloribus quia?
                     </p>
-        
+
                     <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo atque, reprehenderit iusto sint neque, quod sit ipsum corporis
@@ -68,22 +68,60 @@
                 <div class="col-1-of-4">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-world"></i>
-                        <h3 class="heading-tertiary">Explore the world</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
                         <p class="feature-box__text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi esse molestias ad maxime corrupti temporibus alias,
                         </p>
                     </div>
                 </div>
                 <div class="col-1-of-4">
-                    <div class="feature-box"></div>
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet your nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi esse molestias ad maxime corrupti temporibus alias,
+                        </p>
+                    </div>
                 </div>
                 <div class="col-1-of-4">
-                    <div class="feature-box"></div>
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi esse molestias ad maxime corrupti temporibus alias,
+                        </p>
+                    </div>
                 </div>
                 <div class="col-1-of-4">
-                    <div class="feature-box"></div>
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi esse molestias ad maxime corrupti temporibus alias,
+                        </p>
+                    </div>
                 </div>
             </div>
+        </section>
+
+        <section class="section-tours">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Most popular tours
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+
+                </div>
+                <div class="col-1-of-3">
+
+                </div>
+                <div class="col-1-of-3">
+                    
+                </div>
+            </div>
+
         </section>
     </main>
 
