--- a/web/css/proj1/index.html
+++ b/web/css/proj1/index.html
@@ -112,13 +112,13 @@
             </div>
             <div class="row">
                 <div class="col-1-of-3">
-
+                    col-1-of-3
                 </div>
                 <div class="col-1-of-3">
-
+                    col-1-of-3
                 </div>
                 <div class="col-1-of-3">
-                    
+                    col-1-of-3
                 </div>
             </div>
 
