--- a/css-proj-2-postcss/app/index.html
+++ b/css-proj-2-postcss/app/index.html
@@ -203,7 +203,7 @@
       </p>
     </div>
   </footer>
-  <script type="text/javascript" src="/assets/scripts/App.js"></script>
+  <script type="text/javascript" src="/temp/scripts/App.js"></script>
 </body>
 
 </html>
