Update(auto commit)

--- a/web/bootstrap/udemy/bootstrap_sandbox_starter/2_2_basic_typography.html
+++ b/web/bootstrap/udemy/bootstrap_sandbox_starter/2_2_basic_typography.html
@@ -109,7 +109,7 @@
     <br>
 
     <!-- PARAGRAPHS -->
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolore repellendus veniam consequatur vero numquam
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolore repellendus veniam consequatur vero numquam
       voluptatem quam ab expedita eum, ipsam? Necessitatibus dicta quaerat, vitae dolorum, dolor autem reiciendis sapiente.</p>
 
     <!-- LEAD -->
