--- a/web/bootstrap/udemy/bootstrap_sandbox_starter/2_4_floats_position.html
+++ b/web/bootstrap/udemy/bootstrap_sandbox_starter/2_4_floats_position.html
@@ -88,17 +88,17 @@
         <!--##################START HERE###################-->
 
         <!-- FLOATS -->
-        <div>Float left</div>
+        <div class="float-left">Float left</div>
         <br>
-        <div>Float right</div>
+        <div class="float-right">Float right</div>
         <br>
         <div>Float none</div>
         <br>
 
         <!-- RESPONSIVE FLOATS -->
-        <div>Float right on small or wider</div>
+        <div class="float-sm-right">Float right on small or wider</div>
         <br>
-        <div>Float right on medium or wider</div>
+        <div class="float-md-right">Float right on medium or wider</div>
         <br>
         <div>Float right on large or wider</div>
         <br>
@@ -127,13 +127,13 @@
         <br>
 
         <!-- CLEARFIX -->
-        <div>
-            <button>Float Left</button>
-            <button>Float Right</button>
+        <div class="bg-success clearfix">
+            <button class="float-left">Float Left</button>
+            <button class="float-right">Float Right</button>
         </div>
 
         <!-- FIXED TOP -->
-        <h3>Fixed Top</h3>
+        <h3 class="fixed-top">Fixed Top</h3>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae iure natus, fuga provident molestias, voluptates molestiae
             aperiam sit dicta a assumenda nesciunt quos adipisci reprehenderit animi ipsum unde quasi nobis veniam, modi.
@@ -146,7 +146,7 @@
             porro fugiat magni inventore neque. </p>
 
         <!-- FIXED STICKY -->
-        <h3>Sticky</h3>
+        <h3 class="sticky-top">Sticky</h3>
 
         <p>Est molestias sunt quae quibusdam sequi odit, iusto expedita tempore aspernatur ipsum, necessitatibus rerum debitis,
             harum, voluptatibus dolorem. Reprehenderit ex aperiam tempore. Cumque ut iste ullam non pariatur, qui architecto,
@@ -176,7 +176,7 @@
             voluptates velit hic, tenetur cupiditate ab. Hic, unde!</p>
 
         <!-- FIXED BOTTOM -->
-        <h3>Fixed Bottom</h3>
+        <h3 class="fixed-bottom">Fixed Bottom</h3>
 
     </div>
     <!-- ./container -->
