Update(auto commit)

--- a/web/bootstrap/udemy/2_5_colors_background.html
+++ b/web/bootstrap/udemy/2_5_colors_background.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="display-3 text-center my-4">Spacing</h1>
+        <h1 class="display-3 text-center my-4">Colors & Background</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -87,109 +87,72 @@
     <div class="container">
         <!--###################START HERE####################-->
 
-        <!-- MB MARGIN BOTTOM -->
-        <h1 class="bg-success">Margin Bottom 0</h1>
-        <h1 class="bg-success">Margin Bottom 1</h1>
-        <h1 class="bg-success">Margin Bottom 2</h1>
-        <h1 class="bg-success">Margin Bottom 3</h1>
-        <h1 class="bg-success">Margin Bottom 4</h1>
-        <h1 class="bg-success">Margin Bottom 5</h1>
+        <!-- TEXT COLORS -->
+        <p class="text-primary">Text Primary Color</p>
+        <p class="text-secondary">Text Secondary Color</p>
+        <p class="text-success">Text Success Color</p>
+        <p class="text-info">Text Info Color</p>
+        <p class="text-warning">Text Warning Color</p>
+        <p class="text-danger">Text Danger Color</p>
+        <p class="text-light">Text Light Color</p>
+        <p class="text-dark">Text Dark Color</p>
+        <p class="text-white">Text White Color</p>
+        <p class="text-muted">Text Muted</p>
+        <p class="text-black-50">Text Black 50</p>
+        <p class="text-white-50">Text White 50</p>
 
         <br>
         <br>
 
-        <!-- MT MARGIN TOP -->
-        <h1 class="bg-success">Margin Top 0</h1>
-        <h1 class="bg-success">Margin Top 1</h1>
-        <h1 class="bg-success">Margin Top 2</h1>
-        <h1 class="bg-success">Margin Top 3</h1>
-        <h1 class="bg-success">Margin Top 4</h1>
-        <h1 class="bg-success">Margin Top 5</h1>
-
-        <br>
-        <br>
-
-        <!-- ML & MR -->
+        <!-- LINK COLORS -->
+        <p >
+            <a class="text-primary" href="#">Primary link</a>
+        </p>
         <p>
-            <span class="bg-success">Margin Right 5</span> dolor sit amet,
-            <span class="bg-success">Margin Left 3 </span> elit. Voluptatum, optio.</p>
-
-        <br>
-        <br>
-
-        <!-- MX MARGIN LEFT RIGHT -->
-        <p>Lorem ipsum
-            <span class="bg-success">Margin Left & Right 5</span>, consectetur elit. Voluptatum, optio.</p>
-
-        <br>
-        <br>
-
-        <!-- MY  MARGIN TOP BOTTOM -->
-        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
-        <p class="bg-success">Margin Top & Bottom 5</p>
-        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
-
-        <br>
-        <br>
-
-        <!-- BLANK - ALL SIDES -->
-        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
-        <p class="bg-success">Margin All Sides 5</p>
-        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
-
-        <br>
-        <br>
-
-        <!-- PB PADDING BOTTOM -->
-        <h1 class="bg-warning">Padding Bottom 0</h1>
-        <h1 class="bg-warning">Padding Bottom 1</h1>
-        <h1 class="bg-warning">Padding Bottom 2</h1>
-        <h1 class="bg-warning">Padding Bottom 3</h1>
-        <h1 class="bg-warning">Padding Bottom 4</h1>
-        <h1 class="bg-warning">Padding Bottom 5</h1>
-
-        <br>
-        <br>
-
-        <!-- PT PADDING TOP -->
-        <h1 class="bg-warning">Padding Top 0</h1>
-        <h1 class="bg-warning">Padding Top 1</h1>
-        <h1 class="bg-warning">Padding Top 2</h1>
-        <h1 class="bg-warning">Padding Top 3</h1>
-        <h1 class="bg-warning">Padding Top 4</h1>
-        <h1 class="bg-warning">Padding Top 5</h1>
-
-        <br>
-        <br>
-
-        <!-- PL & PR -->
+            <a class="text-secondary" href="#">Secondary link</a>
+        </p>
         <p>
-            <span class="bg-warning">Padding Right 5</span> dolor sit amet,
-            <span class="bg-warning">Padding Left 3 </span> elit. Voluptatum, optio.</p>
+            <a class="text-link" href="#">Success link</a>
+        </p>
+        <p>
+            <a class="text-info" href="#">Info link</a>
+        </p>
+        <p>
+            <a  class="text-warning"href="#">Warning link</a>
+        </p>
+        <p>
+            <a class="text-danger" href="#">Danger link</a>
+        </p>
+        <p>
+            <a class="text-light" href="#">Light link</a>
+        </p>
+        <p>
+            <a class="text-dark" href="#">Dark link</a>
+        </p>
+        <p>
+            <a class="text-muted" href="#">Muted link</a>
+        </p>
+        <p>
+            <a class="text-white" href="#">White link</a>
+        </p>
 
         <br>
         <br>
 
-        <!-- PX PADDING LEFT RIGHT -->
-        <p>Lorem ipsum
-            <span class="bg-warning">Padding Left & Right 5</span>, consectetur elit. Voluptatum, optio.</p>
+        <!-- BACKGROUND COLORS -->
+        <div class="bg-primary text-white">Background Primary Color</div>
+        <div class="bg-secondary text-white">Background Secondary Color</div>
+        <div class="bg-success">Background Success Color</div>
+        <div class="bg-info">Background Info Color</div>
+        <div class="bg-warning">Background Warning Color</div>
+        <div class="bg-danger">Background Danger Color</div>
+        <div class="bg-light">Background Light Color</div>
+        <div class="bg-dark">Background Dark Color</div>
+        <div class="bg-white">Background White Color</div>
+        <div class="bg-transparent">Background Transparent</div>
 
-        <br>
-        <br>
-
-        <!-- PY  PADDING TOP BOTTOM -->
-        <p class="bg-warning">Padding Top & Bottom 5</p>
-
-        <br>
-        <br>
-
-        <!-- ALL SIDES -->
-        <p class="bg-warning">Padding All Sides 5</p>
-
-        <!-- HORIZONTAL CENTERING -->
-        <div class="bg-info" style="width: 200px;">
-            Horizontal Centering
-        </div>
+        <!-- INVISIBLE -->
+        <p class="invisible">Hello</p>
 
     </div>
     <!-- ./container -->
@@ -204,47 +167,3 @@
 </body>
 
 </html>
-
-<!--
-
-{property}{sides}-{size}
-
-###PROPERTY
-m - for classes that set margin
-p - for classes that set padding
-
-###SIDES
-t - for classes that set margin-top or padding-top
-b - for classes that set margin-bottom or padding-bottom
-l - for classes that set margin-left or padding-left
-r - for classes that set margin-right or padding-right
-x - for classes that set both *-left and *-right
-y - for classes that set both *-top and *-bottom
-blank - for classes that set a margin or padding on all 4 sides of the element
-
-###SIZE
-0 - for classes that eliminate the margin or padding by setting it to 0
-1 - (by default) for classes that set the margin or padding to $spacer-x * .25 or $spacer-y * .25
-2 - (by default) for classes that set the margin or padding to $spacer-x * .5 or $spacer-y * .5
-3 - (by default) for classes that set the margin or padding to $spacer-x or $spacer-y
-4 - (by default) for classes that set the margin or padding to $spacer-x * 1.5 or $spacer-y * 1.5
-5 - (by default) for classes that set the margin or padding to $spacer-x * 3 or $spacer-y * 3
-
-
-.mt-0 {
-  margin-top: 0 !important;
-}
-
-.ml-1 {
-  margin-left: ($spacer-x * .25) !important;
-}
-
-.px-2 {
-  padding-left: ($spacer-x * .5) !important;
-  padding-right: ($spacer-x * .5) !important;
-}
-
-.p-3 {
-  padding: $spacer-y $spacer-x !important;
-}
--->
