--- a/web/bootstrap/udemy/2_6_spacing.html
+++ b/web/bootstrap/udemy/2_6_spacing.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="display-3 text-center my-4">Sizing & Borders</h1>
+        <h1 class="display-3 text-center my-4">Spacing</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -85,62 +85,111 @@
     </header>
 
     <div class="container">
-        <!--##################START HERE####################-->
+        <!--###################START HERE####################-->
 
-        <!-- WIDTH CLASSES -->
-        <div class="bg-success p-3">Width 25%</div>
-        <div class="bg-success p-3">Width 50%</div>
-        <div class="bg-success p-3">Width 75%</div>
-        <div class="bg-success p-3">Width 100%</div>
-        <div class="bg-success p-3">Width Auto</div>
+        <!-- MB MARGIN BOTTOM -->
+        <h1 class="bg-success mb-0">Margin Bottom 0</h1>
+        <h1 class="bg-success mb-1">Margin Bottom 1</h1>
+        <h1 class="bg-success mb-2">Margin Bottom 2</h1>
+        <h1 class="bg-success mb-3">Margin Bottom 3</h1>
+        <h1 class="bg-success mb-4">Margin Bottom 4</h1>
+        <h1 class="bg-success mb-5">Margin Bottom 5</h1>
 
         <br>
         <br>
 
-        <!-- HEIGHT CLASSES -->
-        <div>
-            <div class="bg-primary d-inline-block">Height 25%</div>
-            <div class="bg-primary d-inline-block">Height 50%</div>
-            <div class="bg-primary d-inline-block">Height 75%</div>
-            <div class="bg-primary d-inline-block">Height 100%</div>
-            <div class="bg-primary d-inline-block">Height Auto</div>
+        <!-- MT MARGIN TOP -->
+        <h1 class="bg-success mt-0">Margin Top 0</h1>
+        <h1 class="bg-success mt-1">Margin Top 1</h1>
+        <h1 class="bg-success mt-2">Margin Top 2</h1>
+        <h1 class="bg-success mt-3">Margin Top 3</h1>
+        <h1 class="bg-success mt-4">Margin Top 4</h1>
+        <h1 class="bg-success mt-5">Margin Top 5</h1>
+
+        <br>
+        <br>
+
+        <!-- ML & MR -->
+        <p>
+            <span class="bg-success mr-5">Margin Right 5</span> dolor sit amet,
+            <span class="bg-success ml-3">Margin Left 3 </span> elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- MX MARGIN LEFT RIGHT -->
+        <p>Lorem ipsum
+            <span class="mx-5 bg-success">Margin Left & Right 5</span>, consectetur elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- MY  MARGIN TOP BOTTOM -->
+        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+        <p class="my-5 bg-success">Margin Top & Bottom 5</p>
+        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- BLANK - ALL SIDES -->
+        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+        <p class="m-5 bg-success">Margin All Sides 5</p>
+        <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- PB PADDING BOTTOM -->
+        <h1 class="pb-0 bg-warning">Padding Bottom 0</h1>
+        <h1 class="pb-1 bg-warning">Padding Bottom 1</h1>
+        <h1 class="pb-2 bg-warning">Padding Bottom 2</h1>
+        <h1 class="pb-3 bg-warning">Padding Bottom 3</h1>
+        <h1 class="pb-4 bg-warning">Padding Bottom 4</h1>
+        <h1 class="pb-5 bg-warning">Padding Bottom 5</h1>
+
+        <br>
+        <br>
+
+        <!-- PT PADDING TOP -->
+        <h1 class="pt-0 bg-warning">Padding Top 0</h1>
+        <h1 class="pt-1 bg-warning">Padding Top 1</h1>
+        <h1 class="pt-2 bg-warning">Padding Top 2</h1>
+        <h1 class="pt-3 bg-warning">Padding Top 3</h1>
+        <h1 class="pt-4 bg-warning">Padding Top 4</h1>
+        <h1 class="pt-5 bg-warning">Padding Top 5</h1>
+
+        <br>
+        <br>
+
+        <!-- PL & PR -->
+        <p>
+            <span class="pl-4 bg-warning">Padding Right 5</span> dolor sit amet,
+            <span class="pr-4 bg-warning">Padding Left 3 </span> elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- PX PADDING LEFT RIGHT -->
+        <p>Lorem ipsum
+            <span class="px-5 bg-warning">Padding Left & Right 5</span>, consectetur elit. Voluptatum, optio.</p>
+
+        <br>
+        <br>
+
+        <!-- PY  PADDING TOP BOTTOM -->
+        <p class="py-5 bg-warning">Padding Top & Bottom 5</p>
+
+        <br>
+        <br>
+
+        <!-- ALL SIDES -->
+        <p class="p-5 bg-warning">Padding All Sides 5</p>
+
+        <!-- HORIZONTAL CENTERING -->
+        <div class="bg-info mx-auto" style="width: 200px;">
+            Horizontal Centering
         </div>
-
-        <br>
-        <br>
-
-        <!-- BORDERS -->
-        <div class="p-3 mb-2 bg-light">Regular</div>
-        <div class="p-3 mb-2 bg-light">Border Top</div>
-        <div class="p-3 mb-2 bg-light">Border Bottom</div>
-        <div class="p-3 mb-2 bg-light">Border Right</div>
-        <div class="p-3 mb-2 bg-light">Border Left</div>
-
-        <br>
-        <br>
-
-        <!-- BORDER COLORS -->
-        <div class="p-3 mb-2 bg-light">Primary</div>
-        <div class="p-3 mb-2 bg-light">Secondary</div>
-        <div class="p-3 mb-2 bg-light">Success</div>
-        <div class="p-3 mb-2 bg-light">Info</div>
-        <div class="p-3 mb-2 bg-light">Warning</div>
-        <div class="p-3 mb-2 bg-light">Danger</div>
-        <div class="p-3 mb-2 bg-light">Light</div>
-        <div class="p-3 mb-2 bg-light">Dark</div>
-        <div class="p-3 mb-2 bg-light">White</div>
-
-        <br>
-        <br>
-
-        <!-- BORDER RADIUS -->
-        <div class="p-3 mb-2 bg-light">Rounded</div>
-        <div class="p-3 mb-2 bg-light">Rounded Top</div>
-        <div class="p-3 mb-2 bg-light">Rounded Bottom</div>
-        <div class="p-3 mb-2 bg-light">Rounded Right</div>
-        <div class="p-3 mb-2 bg-light">Rounded Left</div>
-        <div class="p-3 mb-2 bg-light">Rounded Circle</div>
-        <div class="p-3 mb-2 bg-light">Dark</div>
 
     </div>
     <!-- ./container -->
@@ -155,3 +204,47 @@
 </body>
 
 </html>
+
+<!--
+
+{property}{sides}-{size}
+
+###PROPERTY
+m - for classes that set margin
+p - for classes that set padding
+
+###SIDES
+t - for classes that set margin-top or padding-top
+b - for classes that set margin-bottom or padding-bottom
+l - for classes that set margin-left or padding-left
+r - for classes that set margin-right or padding-right
+x - for classes that set both *-left and *-right
+y - for classes that set both *-top and *-bottom
+blank - for classes that set a margin or padding on all 4 sides of the element
+
+###SIZE
+0 - for classes that eliminate the margin or padding by setting it to 0
+1 - (by default) for classes that set the margin or padding to $spacer-x * .25 or $spacer-y * .25
+2 - (by default) for classes that set the margin or padding to $spacer-x * .5 or $spacer-y * .5
+3 - (by default) for classes that set the margin or padding to $spacer-x or $spacer-y
+4 - (by default) for classes that set the margin or padding to $spacer-x * 1.5 or $spacer-y * 1.5
+5 - (by default) for classes that set the margin or padding to $spacer-x * 3 or $spacer-y * 3
+
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+.ml-1 {
+  margin-left: ($spacer-x * .25) !important;
+}
+
+.px-2 {
+  padding-left: ($spacer-x * .5) !important;
+  padding-right: ($spacer-x * .5) !important;
+}
+
+.p-3 {
+  padding: $spacer-y $spacer-x !important;
+}
+-->
