--- a/web/bootstrap/udemy/2_8_breakpoints.html
+++ b/web/bootstrap/udemy/2_8_breakpoints.html
@@ -9,11 +9,74 @@
         crossorigin="anonymous">
 
     <title>Bootstrap Sandbox</title>
+    <style>
+        /* Small devices (landscape phones) */
+
+        @media (min-width: 576px) {
+            body{
+                background: red
+            }
+        }
+
+        /* Medium devices (tablets) */
+
+        @media (min-width:768px) {
+            body{
+                background: green
+            }
+        }
+
+        /* Large devices (desktops) */
+
+        @media (min-width: 992px) {
+            body{
+                background: blue;
+            }
+        }
+
+        /* Extra large devices (large desktops) */
+
+        @media (min-width:1200px) {
+            body{
+                background: yellow;
+            }
+        }
+
+        /* The given screen size or smaller */
+
+        /* Extra small devices (portrait phones)*/
+
+        @media (max-width: 575px) {
+            body{
+                background: coral
+            }
+        }
+
+        /* Small devices (landscape phones)*/
+
+        @media (max-width: 767px) {
+            body{
+                background: cyan
+            }
+        }
+
+        /* Medium devices (tablets)*/
+
+        @media (max-width:991px) {
+            body{
+                background: gray
+            }
+        }
+
+        /* Large devices (desktops)*/
+
+        @media (max-width:1199px) {}
+    </style>
 </head>
 
 <body>
     <header>
-        <h1 class="display-3 text-center my-4">Colors & Background</h1>
+        <h1 class="display-3 text-center my-4">Breakpoints</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -85,74 +148,8 @@
     </header>
 
     <div class="container">
-        <!--###################START HERE####################-->
+        <!--########################START HERE#########################-->
 
-        <!-- TEXT COLORS -->
-        <p>Text Primary Color</p>
-        <p>Text Secondary Color</p>
-        <p>Text Success Color</p>
-        <p>Text Info Color</p>
-        <p>Text Warning Color</p>
-        <p>Text Danger Color</p>
-        <p>Text Light Color</p>
-        <p>Text Dark Color</p>
-        <p>Text White Color</p>
-        <p>Text Muted</p>
-        <p>Text Black 50</p>
-        <p>Text White 50</p>
-
-        <br>
-        <br>
-
-        <!-- LINK COLORS -->
-        <p>
-            <a href="#">Primary link</a>
-        </p>
-        <p>
-            <a href="#">Secondary link</a>
-        </p>
-        <p>
-            <a href="#">Success link</a>
-        </p>
-        <p>
-            <a href="#">Info link</a>
-        </p>
-        <p>
-            <a href="#">Warning link</a>
-        </p>
-        <p>
-            <a href="#">Danger link</a>
-        </p>
-        <p>
-            <a href="#">Light link</a>
-        </p>
-        <p>
-            <a href="#">Dark link</a>
-        </p>
-        <p>
-            <a href="#">Muted link</a>
-        </p>
-        <p>
-            <a href="#">White link</a>
-        </p>
-
-        <br>
-        <br>
-
-        <!-- BACKGROUND COLORS -->
-        <div>Background Primary Color</div>
-        <div>Background Secondary Color</div>
-        <div>Background Success Color</div>
-        <div>Background Info Color</div>
-        <div>Background Warning Color</div>
-        <div>Background Danger Color</div>
-        <div>Background Light Color</div>
-        <div>Background Dark Color</div>
-        <div>Background White Color</div>
-        <div>Background Transparent</div>
-
-        <!-- INVISIBLE -->
-        <p>Hello</p>
 
     </div>
     <!-- ./container -->
