--- a/web/bootstrap/udemy/2_7_sizing.html
+++ b/web/bootstrap/udemy/2_7_sizing.html
@@ -9,46 +9,11 @@
         crossorigin="anonymous">
 
     <title>Bootstrap Sandbox</title>
-    <style>
-        /* Small devices (landscape phones) */
-
-        @media () {}
-
-        /* Medium devices (tablets) */
-
-        @media () {}
-
-        /* Large devices (desktops) */
-
-        @media () {}
-
-        /* Extra large devices (large desktops) */
-
-        @media () {}
-
-        /* The given screen size or smaller */
-
-        /* Extra small devices (portrait phones)*/
-
-        @media () {}
-
-        /* Small devices (landscape phones)*/
-
-        @media () {}
-
-        /* Medium devices (tablets)*/
-
-        @media () {}
-
-        /* Large devices (desktops)*/
-
-        @media () {}
-    </style>
 </head>
 
 <body>
     <header>
-        <h1 class="display-3 text-center my-4">Breakpoints</h1>
+        <h1 class="display-3 text-center my-4">Sizing & Borders</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -120,8 +85,62 @@
     </header>
 
     <div class="container">
-        <!--########################START HERE#########################-->
+        <!--##################START HERE####################-->
 
+        <!-- WIDTH CLASSES -->
+        <div class="bg-success p-3 w-25">Width 25%</div>
+        <div class="bg-success p-3 w-50">Width 50%</div>
+        <div class="bg-success p-3 w-75">Width 75%</div>
+        <div class="bg-success p-3 w-100">Width 100%</div>
+        <div class="bg-success p-3 w-auto">Width Auto</div>
+
+        <br>
+        <br>
+
+        <!-- HEIGHT CLASSES -->
+        <div style="height:300px; border:1px solid #333">
+            <div class="bg-primary d-inline-block h-25">Height 25%</div>
+            <div class="bg-primary d-inline-block h-50">Height 50%</div>
+            <div class="bg-primary d-inline-block h-75">Height 75%</div>
+            <div class="bg-primary d-inline-block h-100">Height 100%</div>
+            <div class="bg-primary d-inline-block h-auto">Height Auto</div>
+        </div>
+
+        <br>
+        <br>
+
+        <!-- BORDERS -->
+        <div class="p-3 mb-2 bg-light">Regular</div>
+        <div class="p-3 mb-2 bg-light">Border Top</div>
+        <div class="p-3 mb-2 bg-light">Border Bottom</div>
+        <div class="p-3 mb-2 bg-light">Border Right</div>
+        <div class="p-3 mb-2 bg-light">Border Left</div>
+
+        <br>
+        <br>
+
+        <!-- BORDER COLORS -->
+        <div class="p-3 mb-2 bg-light">Primary</div>
+        <div class="p-3 mb-2 bg-light">Secondary</div>
+        <div class="p-3 mb-2 bg-light">Success</div>
+        <div class="p-3 mb-2 bg-light">Info</div>
+        <div class="p-3 mb-2 bg-light">Warning</div>
+        <div class="p-3 mb-2 bg-light">Danger</div>
+        <div class="p-3 mb-2 bg-light">Light</div>
+        <div class="p-3 mb-2 bg-light">Dark</div>
+        <div class="p-3 mb-2 bg-light">White</div>
+
+        <br>
+        <br>
+
+        <!-- BORDER RADIUS -->
+        <div class="p-3 mb-2 bg-light">Rounded</div>
+        <div class="p-3 mb-2 bg-light">Rounded Top</div>
+        <div class="p-3 mb-2 bg-light">Rounded Bottom</div>
+        <div class="p-3 mb-2 bg-light">Rounded Right</div>
+        <div class="p-3 mb-2 bg-light">Rounded Left</div>
+        <div class="p-3 mb-2 bg-light">Rounded Circle</div>
+        <div class="p-3 mb-2 bg-light">Dark</div>
 
     </div>
     <!-- ./container -->
