--- a/web/bootstrap/udemy/3_3_navbar.html
+++ b/web/bootstrap/udemy/3_3_navbar.html
@@ -23,7 +23,8 @@
                         </button>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="2_2_basic_typography.html">2.2 Basic Typography</a>
-                            <a class="dropdown-item" href="2_3_text_alignment_display.html">2.3 Text Alignment & Display</a>
+                            <a class="dropdown-item" href="2_3_text_alignment_display.html">2.3 Text Alignment &
+                                Display</a>
                             <a class="dropdown-item" href="2_4_floats_position.html">2.4 Floats & Position</a>
                             <a class="dropdown-item" href="2_5_colors_background.html">2.5: Colors & Background</a>
                             <a class="dropdown-item" href="2_6_spacing.html">2.6 Spacing</a>
@@ -60,7 +61,8 @@
                             <a class="dropdown-item" href="4_2_grid_system.html">4.2 Grid System</a>
                             <a class="dropdown-item" href="4_3_grid_alignment.html">4.3 Grid Alignment</a>
                             <a class="dropdown-item" href="4_4_flexbox.html">4.4 Flexbox</a>
-                            <a class="dropdown-item" href="4_5_auto_margins_wrapping_order.html">4.5 Auto Margins & Wrap</a>
+                            <a class="dropdown-item" href="4_5_auto_margins_wrapping_order.html">4.5 Auto Margins &
+                                Wrap</a>
                         </div>
                     </div>
                 </div>
@@ -87,32 +89,82 @@
     <!--##################START HERE###################-->
 
     <!-- SIMPLE NAVBAR -->
-    <nav>
-        <div>
-            <a href="#">Navbar</a>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
                 </li>
-                <li>
-                    <a href="#">About</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
                 </li>
-                <li>
-                    <a href="#">Services</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
                 </li>
-                <li>
-                    <a href="#">Contact</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <!-- NAVBAR WITH RESPONSIVE TOGGLE -->
-
+    <nav class="navbar navbar-expand-sm navbar-light bg-light mt-4">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse"id="navbarNav">
+                <ul class="navbar-nav ml-auto" id="navbarNav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- NAVBAR WITH FORM -->
 
-
+    <nav class="navbar navbar-expand-sm navbar-light bg-light mt-4">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse"id="navbarNav">
+                <ul class="navbar-nav " id="navbarNav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <form class="form-inline">
+                    <input type="text" class="form-control mr-2" placeholder="Search">
+                    <button class="btn btn-outline-success">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
     <!-- NAVBAR WITH DROPDOWN -->
 
 
